--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@base-ui/react": "^1.2.0",
+    "@clerk/nextjs": "^6.38.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.32.0",
     "lucide-react": "^0.574.0",
+    "motion": "^12.34.2",
     "next": "16.1.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
