--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@base-ui/react": "^1.2.0",
     "@clerk/nextjs": "^6.38.0",
     "@tabler/icons-react": "^3.36.1",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.32.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
