--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.32.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.574.0",
     "motion": "^12.34.2",
     "next": "16.1.6",
